# pipeformers

./: .gitignore  README.md  prepare_tests.py  pyproject.toml
examples/: deepspeed_config.json  train_llama.sh
pipeformers/: activations.py  rope.py  trainer.py
pipeformers/models/: __init__.py  llama.py
tests/models/: test_llama.py
