[tool.poetry]
name = "pipeformers"
version = "0.1.0"
description = ""
authors = ["Shukant Pal <foss@shukantpal.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
deepspeed = "^0.14.4"
flash-attn = "^2.6.1"
torch = "^2.2.1"
transformers = "^4.40.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
